Modificacion Ingreso Usuario

--- a/acceso.html
+++ b/acceso.html
@@ -57,8 +57,8 @@
 
                         </div>
                         <div class="caption">
-                            <h2>Juan Carlos Villalba 1</h2>
-                            <p class="colorh">Cambiar de usuario</p>
+                            <h2>Juan Carlos</h2>
+                            <p class="colorh">Ingresar un Nuevo Usuario</p>
                         </div>
                     </div>
                     <div class="col-md-4">
